[package]
name = "wormhole-messenger-solana"
version = "0.1.0"
edition = "2018"

[lib]
name = "messenger_solana"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
wasm = ["no-entrypoint"]

[dependencies]
web-sys                   = "0.3.56"
borsh                     = "0.9.1"
sha3                      = "0.9.1"
thiserror                 = "1.0.24"
byteorder                 = "1.4.3"
hex                       = "0.4.3"
solana-program            = { version="=1.9.4" }
nom                       = { version="7", default-features=false, features=["alloc"] }
wasm-bindgen              = { version = "0.2.74", features = ["serde-serialize"] }
wormhole-sdk              = { git = "https://github.com/certusone/wormhole", features = ["devnet", "solana"] }
#wormhole-sdk              = { path="../../../sdk/rust/sdk", features = ["devnet", "solana"] }

[dev-dependencies]
solana-program-test = "=1.9.4"
solana-sdk          = "=1.9.4"
rand                = "0.7.3"

[patch.crates-io]
memmap2 = { path = "memmap2-rs" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
