[package]
name    = "wormhole-messenger-terra"
version = "0.0.1"
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "sdk-copy",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library    = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
borsh                     = "*"
cosmwasm-std              = { version = "0.16.0" }
cosmwasm-storage          = { version = "0.16.0" }
schemars                  = "0.8.1"
serde                     = { version = "1.0.103", default-features = false, features = ["derive"] }
#wormhole-sdk              = { path = "../../../sdk/rust/sdk", features = ["terra", "devnet"] }
wormhole-sdk              = { git = "https://github.com/certusone/wormhole", branch="fix/sdk/terra", features = ["terra", "devnet"] }

[dev-dependencies]
cosmwasm-vm = { version = "0.16.0", default-features = false }
serde_json  = "1.0"
